[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/backgrounds/Background4.png" type="Texture" id=1]
[ext_resource path="res://Assets/backgrounds/endline.png" type="Texture" id=2]
[ext_resource path="res://Assets/McLaren-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://puzzlec.gd" type="Script" id=4]
[ext_resource path="res://TouchScreenClass.gd" type="Script" id=5]
[ext_resource path="res://Assets/backgrounds/puzzlebg.png" type="Texture" id=6]
[ext_resource path="res://BackButton.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.360784, 0, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 165, 170 )

[node name="Level2c" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 414.0
margin_bottom = 896.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 1 )
centered = false

[node name="QuestionLabel" type="Label" parent="Control"]
margin_left = 13.0
margin_top = 114.0
margin_right = 401.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Panga namba hizi kwa utaratibu
 unaopanda? (kwanzia 1-9)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Endline" type="Sprite" parent="Control"]
position = Vector2( 0, 853 )
texture = ExtResource( 2 )
centered = false

[node name="cover" type="Sprite" parent="Control"]
visible = false
position = Vector2( 47, 330 )
texture = ExtResource( 6 )
centered = false

[node name="BackButton" type="Button" parent="Control"]
margin_left = 30.0
margin_top = 30.0
margin_right = 105.0
margin_bottom = 65.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Nyuma"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="puzzle" type="Node2D" parent="."]
position = Vector2( 70, 340 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 4 )

[node name="TouchScreenClass" type="TouchScreenButton" parent="puzzle"]
position = Vector2( -50, -23 )
shape = SubResource( 4 )
passby_press = true
script = ExtResource( 5 )
[connection signal="pressed" from="Control/BackButton" to="puzzle" method="_on_BackButton_pressed"]
